# dcorelib

./: README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  wheel.yml
docker/: entrypoint.sh
src/dcorelib/: __init__.py
src/dcorelib/sparse_gf/: basis.py  high_freq.py
src/dcorelib/triqs_compat/dft_tools/: __init__.py  block_structure.py  sumk_dft.py  sumk_dft_tools.py
src/dcorelib/triqs_compat/dft_tools/converters/: hk.py  wannier90.py
src/dcorelib/triqs_compat/gf/: gf.py  meshes.py  tools.py
src/dcorelib/triqs_compat/utility/: pade_approximants.py
tests/dfttools/: test_srvo3_Gloc.py
tests/sparse_modeling/: test_high_freq.py
tests/triqs_compat/: test_gf.py  test_mesh.py
